--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node .",
-    "build": "pkg package.json --out-path build"
+    "build": "pkg package.json --out-path build",
+    "test": "echo 'no tests'"
   },
   "dependencies": {
     "typescript": "^2.8.3",
