--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "scripts": {
     "start": "node .",
     "build": "pkg package.json --out-path build",
-    "test": "echo 'no tests'"
+    "test": "mocha"
   },
   "dependencies": {
     "typescript": "^2.8.3",
     "vm2": "^3.5.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "chai": "^4.1.2",
+    "mocha": "^5.1.1",
     "pkg": "^4.3.1"
   },
   "pkg": {
