--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "blockchain",
   "version": "1.0.0",
-  "main": "./src/main.js",
-  "bin": "./src/main.js",
+  "main": "./src/index.ts",
+  "bin": "./dist/src/index.js",
   "repository": "git@github.com:kiberzauras/chain.git",
   "author": "Rytis Grincevicius <rytis.grincevicius@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node .",
-    "build": "pkg package.json --out-path build",
-    "test": "mocha"
+    "start": "npm run build:live",
+    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
+    "build": "./node_modules/.bin/tsc && pkg package.json --out-path build",
+    "test": "mocha --require ts-node/register './test/**/*.spec.ts'"
   },
   "dependencies": {
     "typescript": "^2.8.3",
@@ -17,15 +18,16 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
     "chai": "^4.1.2",
     "mocha": "^5.1.1",
-    "pkg": "^4.3.1"
+    "pkg": "^4.3.1",
+    "ts-node": "^6.0.3"
   },
   "pkg": {
     "scripts": [
       "node_modules/vm2/**/*.js",
-      "scripts/**/*.js",
-      "scripts/**/*.ts"
+      "dist/**/*.js"
     ]
   }
 }
