--- a/package.json
+++ b/package.json
@@ -3,25 +3,42 @@
   "version": "1.0.0",
   "main": "./src/index.ts",
   "bin": "./dist/src/index.js",
-  "repository": "git@github.com:kiberzauras/chain.git",
+  "repository": "git@github.com:grinry/chain.git",
   "author": "Rytis Grincevicius <rytis.grincevicius@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "npm run build:live",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
     "build": "./node_modules/.bin/tsc && pkg package.json --out-path build",
-    "test": "mocha --require ts-node/register './test/**/*.spec.ts'"
+    "docs": "apidoc -i src -o docs",
+    "postdocs": "opn docs/index.html",
+    "test": "cross-env NODE_ENV=test nyc mocha --timeout 20000 --require ts-node/register --require source-map-support/register --recursive test/**/*.spec.ts",
+    "test:unit": "cross-env NODE_ENV=test mocha tests/unit",
+    "coverage": "nyc report | coveralls"
   },
   "dependencies": {
+    "command-line-args": "^5.0.2",
+    "container-ioc": "^1.7.19",
+    "cross-env": "^5.1.4",
+    "express": "^4.16.3",
+    "http": "^0.0.0",
+    "socket.io": "^2.1.1",
     "typescript": "^2.8.3",
     "vm2": "^3.5.2"
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/command-line-args": "^5.0.0",
+    "@types/express": "^4.16.0",
     "@types/mocha": "^5.2.0",
+    "@types/socket.io": "^1.4.34",
+    "apidoc": "^0.17.5",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "mocha": "^5.1.1",
+    "nyc": "^11.0.3",
     "pkg": "^4.3.1",
+    "source-map-support": "^0.5.6",
     "ts-node": "^6.0.3"
   },
   "pkg": {
@@ -29,5 +46,22 @@
       "node_modules/vm2/**/*.js",
       "dist/**/*.js"
     ]
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "**/*.spec.ts"
+    ],
+    "reporter": [
+      "html",
+      "text"
+    ],
+    "all": true
   }
 }
