--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,8 @@ max_line_length = 120
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.ts]
+quote_type = "single"
+spaces_around_operators = true
+spaces_around_brackets = inside
