--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "command-line-args": "^5.0.2",
     "container-ioc": "^1.7.19",
     "cross-env": "^5.1.4",
+    "elliptic": "^6.4.0",
     "express": "^4.16.3",
     "http": "^0.0.0",
+    "lodash": "^4.17.10",
     "socket.io": "^2.1.1",
     "typescript": "^2.8.3",
     "vm2": "^3.5.2"
@@ -30,6 +32,7 @@
     "@types/chai": "^4.1.3",
     "@types/command-line-args": "^5.0.0",
     "@types/express": "^4.16.0",
+    "@types/lodash": "^4.14.110",
     "@types/mocha": "^5.2.0",
     "@types/socket.io": "^1.4.34",
     "apidoc": "^0.17.5",
